<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RePong</string>
    <string name="action_settings">Settings</string>
    
    <string name="lblName">Name</string>
    <string name="lblCreateGame">Spiel Erstellen</string>
    <string name="lblGamename">Spielname</string>
    <string name="lblPlayerCount">Spieleranzahl</string>
    <string name="lblWaitingRoom">Warteraum</string>
    <string name="lblPleaseWait">Bitte Warten&#8230;</string>
    <string name="lblJoinGame">Spiel Beitreten</string>
    <string name="lblProfile">Profil</string>
    <string name="lblPlayedGamesCnt">Anzahl gespielter Spiele</string>
    <string name="lblTotalPlayedTime">Gesamtspielzeit [min]</string>
    <string name="lblWonGamesCnt">Gewonnene Spiele</string>
    
    <string name="btnStart">Start</string>
    <string name="btnExit">Exit</string>
    <string name="btnCancel">Abbrechen</string>
    <string name="btnLeave">Verlassen</string>
    <string name="btnBack">Zurück</string>
    <string name="btnOk">OK</string>
    <string name="btnCreate">Erstellen</string>
    <string name="btnCreateGame">Spiel Erstellen</string>
    <string name="btnJoinGame">Spiel Beitreten</string>
    <string name="btnProfile">Profil</string>
    <string name="btnRefresh">Refresh</string>
    <string name="btnChange">Ändern</string>
    <string name="btnSave">Speichern</string>
    
    <string name="paddle">paddle</string>
    <string name="createGameInProgress">Create Game is in Progress, please Wait!</string>
    <string name="invalidUserName">Invalid user name, please try again!</string>
    <string name="invalidGameName">Invalid game name, please try again!</string>
    <string name="msgCloseAppDialog">Do you really want to close?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="upps">Upps! Something went wrong</string>
    <string name="msgLoggingIn">Logging in</string>
    
    <string name="ComWaitInfoIntentGameId">ComWaitInfoIntentGameId</string>
    <string name="ball">ball</string>

</resources>
