<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityStartScreen" >

    <Button
        android:id="@+id/btnProfile"
        style="@style/RePongButton"
        android:layout_alignLeft="@+id/btnJoinGame"
        android:layout_below="@+id/btnJoinGame"
        android:layout_marginTop="5dp"
        android:onClick="btnProfileOnClick"
        android:text="@string/btnProfile" />

    <Button
        android:id="@+id/btnJoinGame"
        style="@style/RePongButton"
        android:layout_alignLeft="@+id/btnCreateGame"
        android:layout_below="@+id/btnCreateGame"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:onClick="btnJoinGameOnClick"
        android:text="@string/btnJoinGame" />

    <TextView
        android:id="@+id/logginProgressMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="53dp"
        android:layout_toRightOf="@+id/btnCreateGame"
        android:layout_below="@+id/logo"
        android:text="@string/msgLoggingIn"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@id/loginProgressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/logginProgressMessage"
        android:layout_marginLeft="29dp"
        android:layout_toRightOf="@+id/btnCreateGame"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnCreateGame"
        style="@style/RePongButton"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:onClick="btnCreateGameOnClick"
        android:text="@string/btnCreateGame" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/lblGamename" 
        android:src="@drawable/repong_logo" />

</RelativeLayout>