<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lblCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblName"
        android:layout_alignBottom="@+id/lblName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblCaption"
        android:layout_marginRight="15dp"
        android:layout_marginTop="38dp"
        android:layout_toLeftOf="@+id/txtName"
        android:text="@string/lblName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblCaption"
        android:layout_below="@+id/txtName"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnOk" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnOk"
        android:layout_alignBottom="@+id/btnOk"
        android:layout_toLeftOf="@+id/btnOk"
        android:text="@string/btnExit" />

</RelativeLayout>