<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lblCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/lblWaitingRoom"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/listViewPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStart"
        android:layout_alignRight="@+id/btnStart"
        android:layout_marginLeft="30dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:layout_below="@+id/lblCaption" >

    </ListView>

    <Button
        android:id="@+id/btnLeave"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@+id/lblCaption"
        android:onClick="btnLeaveOnClick"
        android:text="@string/btnLeave" />

    <TextView
        android:id="@+id/lblPleaseWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStart"
        android:layout_alignBottom="@+id/btnStart"
        android:layout_toRightOf="@+id/lblCaption"
        android:text="@string/lblPleaseWait"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:onClick="btnStartOnClick"
        android:text="@string/btnStart" />

</RelativeLayout>