<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lblCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/lblCreateGame"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/lblGamename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblCaption"
        android:layout_marginRight="24dp"
        android:layout_marginTop="34dp"
        android:layout_toLeftOf="@+id/seekBarPlayerCount"
        android:text="@string/lblGamename"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtGamename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblGamename"
        android:layout_alignBottom="@+id/lblGamename"
        android:layout_alignLeft="@+id/seekBarPlayerCount"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblPlayerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblGamename"
        android:layout_below="@+id/txtGamename"
        android:layout_marginTop="38dp"
        android:text="@string/lblPlayerCount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBarPlayerCount"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblCaption"
        android:layout_alignTop="@+id/lblPlayerCount"
        android:layout_marginLeft="46dp"
        android:max="3"
        android:progress="1" />

    <TextView
        android:id="@+id/lblSeekValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblPlayerCount"
        android:layout_alignBottom="@+id/lblPlayerCount"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/seekBarPlayerCount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        style="@style/RePongButton"
        android:id="@+id/btnCreate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:onClick="btnCreateOnClick"
        android:text="@string/btnCreate" />

    <Button
        style="@style/RePongButton"
        android:id="@+id/btnCancel"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/seekBarPlayerCount"
        android:onClick="btnCancelOnClick"
        android:text="@string/btnCancel" />

</RelativeLayout>
