<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lblJoinGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/lblJoinGame"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <Button
        style="@style/RePongButton"
        android:id="@+id/btnBack"
        android:layout_width="80dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:onClick="btnBackOnClick"
        android:text="@string/btnBack" />

    <Button
        style="@style/RePongButton"
        android:id="@+id/btnRefresh"
        android:layout_width="80dp"
        android:layout_alignBaseline="@+id/btnBack"
        android:layout_alignBottom="@+id/btnBack"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:onClick="btnRefreshOnClick"
        android:text="@string/btnRefresh" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnBack"
        android:layout_alignRight="@+id/btnRefresh"
        android:layout_below="@+id/btnBack"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" >

    </ListView>

</RelativeLayout>
